[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinuislider"
version = "1.1.0"
description = "tinui高级滑动条"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Smart-Space", email = "smart-space@qq.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "tinui",
]

[tool.setuptools]
packages = ["tinuislider"]

[project.urls]
Repository = "https://github.com/Smart-Space/TinUISlider"